# osrm_distance

./: README.md  app.py  config.py  data_processor.py  deploy.sh  main.py  osrm_service.py  pyproject.toml  replit.md  requirements.txt  routes.py  sample_distance_generator.csv
attached_assets/: Pasted--DOCTYPE-html-html-head-meta-charset-UTF-8-title-OSRM-Tool-title--1751976537081_1751976537083.txt  Pasted-body-background-color-ivory-font-family-Verdana-Courier-New-Courier-monospace--1751976552702_1751976552702.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
uploads/: sample_distance_generator_data.csv
